--- a/libs/core/stylesheets/src/lib/variables/_var.scss
+++ b/libs/core/stylesheets/src/lib/variables/_var.scss
@@ -1,179 +1,15 @@
 @use 'sass:map';
 @use '@angular/material' as mat;
-@use '@angular/material-experimental' as matx;
-
-$color-primary: 92, 119, 255;
-$color-primary-contrast: 255, 255, 255;
-
-$color-accent: 255, 64, 129;
-$color-accent-contrast: 255, 255, 255;
-
-$color-warn: 244, 67, 54;
-$color-warn-contrast: 255, 255, 255;
-
-// Previously "$sidenav-background"
-$sidenav-background: #1a202e !default;
-
-$editor-primary : (
-    50: #f1f7e4,
-    100: #dbebbd,
-    200: #c2dd92,
-    300: #a8d064,
-    400: #94c63d,
-    500: #80bc00,
-    600: #71ac00,
-    700: #5b9900,
-    800: #458600,
-    900: #156400,
-    contrast: (
-      50: rgba(black, 0.87),
-      100: rgba(black, 0.87),
-      200: rgba(black, 0.87),
-      300: white,
-      400: white,
-      500: white,
-      600: white,
-      700: white,
-      800: white,
-      900: white
-    )
-);
-
-$editor-accent: (
-    A50: #f4f7e5,
-    A100: #e3eabf,
-    A200: #d0db96,
-    A300: #bdce6c,
-    A400: #adc449,
-    A500: #9eba22,
-    A600: #8eaa1a,
-    A700: #78970c,
-    A800: #628400,
-    A900: #3d6300,
-    contrast: (
-      50: rgba(black, 0.87),
-      100: rgba(black, 0.87),
-      200: rgba(black, 0.87),
-      300: white,
-      400: white,
-      500: white,
-      600: white,
-      700: white,
-      800: white,
-      900: white
-    ),
-);
-
-$rate-now-typography: mat.define-typography-config(
-  $font-family: var(--font),
-  $headline-1: mat.define-typography-level(112px, 112px, 300, $letter-spacing: -0.05em),
-  $headline-2: mat.define-typography-level(56px, 56px, 400, $letter-spacing: -0.02em),
-  $headline-3: mat.define-typography-level(45px, 48px, 400, $letter-spacing: -0.005em),
-  $headline-4: mat.define-typography-level(34px, 40px, 400),
-  $headline-5: mat.define-typography-level(24px, 32px, 400, $letter-spacing: -0.019em),
-  $headline-6: mat.define-typography-level(18px, 26px, 500, $letter-spacing: -0.014em),
-  $subtitle-1: mat.define-typography-level(16px, 28px, 400, $letter-spacing: -0.011em),
-  $subtitle-2: mat.define-typography-level(15px, 24px, 400, $letter-spacing: -0.009em),
-  $body-1: mat.define-typography-level(14px, 20px, 400, $letter-spacing: -0.006em),
-  $body-2: mat.define-typography-level(14px, 24px, 500, $letter-spacing: -0.006em),
-  $caption: mat.define-typography-level(12px, 20px, 400, $letter-spacing: 0),
-  $button: mat.define-typography-level(14px, 14px, 500, $letter-spacing: -0.006em),
-) !default;
 
 // Palettes for theme using the Material Design palettes.
-$auto-editor-primary: mat.define-palette($editor-primary, 500);
-$auto-editor-accent: mat.define-palette($editor-accent, A800, A100, A400);
-$auto-editor-warn: mat.define-palette(mat.$red-palette);
+$kafe-primary: mat.m2-define-palette(mat.$m2-indigo-palette, A400, A100, A700);
+$kafe-accent: mat.m2-define-palette(mat.$m2-indigo-palette);
+$kafe-warn: mat.m2-define-palette(mat.$m2-red-palette);
 
-$knowify-theme-light: mat.define-light-theme((
+$knowify-theme-light:  mat.m2-define-light-theme((
   color: (
-    primary: $auto-editor-primary,
-    accent: $auto-editor-accent,
-    warn: $auto-editor-warn,
+    primary: $kafe-primary,
+    accent: $kafe-accent,
+    warn: $kafe-warn,
   )
 ));
-
-$knowify-theme-light-m3: matx.define-theme((
-  color: (
-    theme-type: light,
-    primary: matx.$m3-green-palette,
-  ),
-  typography: (
-    plain-family: 'Exo 2',
-    brand-family: 'Exo 2',
-  )
-));
-
-$knowify-theme-foreground: (
-  text: black,
-  elevation: #000,
-  divider: rgba(82, 63, 105, 0.06)
-) !default;
-
-$knowify-theme-background: (
-  app-bar: #ebebee
-) !default;
-
-$knowify-dark-theme-background: (
-  background: lighten($sidenav-background, 5),
-  card: $sidenav-background,
-  app-bar: darken($sidenav-background, 5),
-  dialog: $sidenav-background,
-  status-bar: darken($sidenav-background, 5)
-) !default;
-
-$foreground-light: map_merge(mat.$light-theme-foreground-palette, $knowify-theme-foreground);
-$background-light: map_merge(mat.$light-theme-background-palette, $knowify-theme-background);
-
-$foreground-dark: mat.$dark-theme-foreground-palette;
-$background-dark: map_merge(mat.$dark-theme-background-palette, $knowify-dark-theme-background);
-
-// LIGHT THEME
-
-$knowify-theme-light: map.set(
-  $knowify-theme-light,
-  color,
-  foreground,
-  $foreground-light
-);
-
-$knowify-theme-light: map.set(
-  $knowify-theme-light,
-  color,
-  background-light,
-  $background-light
-);
-
-// DARK THEME
-
-$knowify-theme-dark: mat.define-dark-theme((
-  color: (
-    primary: $auto-editor-primary,
-    accent: $auto-editor-accent,
-    warn: $auto-editor-warn,
-  ),
-  typography: $rate-now-typography,
-  density: 0,
-));
-
-$knowify-theme-dark: map.set(
-  $knowify-theme-dark,
-  color,
-  foreground,
-  $foreground-dark
-);
-
-$knowify-theme-dark: map.set(
-  $knowify-theme-dark,
-  color,
-  background-dark,
-  $background-dark
-);
-
-$light-primary-text: white;
-$light-secondary-text: rgba(white, 0.7);
-$light-disabled-text: rgba(white, 0.5);
-
-$dark-primary-text: rgba(black, 0.87);
-$dark-secondary-text: rgba(black, 0.54);
-$dark-disabled-text: rgba(black, 0.38);
