[ADD] Landing page sections

--- a/libs/dashboard/landing-pages/src/lib/view-home/view-home.component.html
+++ b/libs/dashboard/landing-pages/src/lib/view-home/view-home.component.html
@@ -1,4 +1,56 @@
-<div>
-  <h1>Welcome to Kafè Reservations</h1>
-  <button routerLink="/reservation">Make a Reservation</button>
+<div class="px-gutter flex w-full flex-col gap-4">
+  <!-- SECTION: LANDING IMAGE -->
+
+  <div></div>
+
+  <!-- SECTION: TITLE -->
+
+  <div class="flex w-full items-center flex-col">
+    <h1>¡Bienvenido a Kafè!</h1>
+    <span
+      >Rserva tu mesa en nuestro aclamado restaurante en el Lower East Side de
+      Manhattan</span
+    >
+  </div>
+
+  <!-- SECTION: ABOUT US -->
+
+  <div class="flex w-full flex-col">
+    <div>Sobre Nosotros</div>
+    <div>
+      Kafe es reconocido por su ambiente acogedor y su deliciosa cocina. Dese su
+      apertura, ha sido un lugar popular tanto para los locales como para los
+      visitantes. Ven y disfruta de una experiencia gastroómica única
+    </div>
+
+    <!-- IMAGE CARROSELL -->
+
+    <div class="flex"></div>
+  </div>
+
+  <!-- SECTION: RSERVATIONS -->
+
+  <div class="flex w-full flex-col">
+    <div>Reservations</div>
+    <div>Horario de reservas: 6pm a 10pm en intervalos de media hora.</div>
+    <div>
+      Para reservar, selecciona la fecha y hora deseada, proporciona tu
+      información de contacto.
+    </div>
+  </div>
+
+  <!-- SECTION: TESTIMONIOS -->
+
+  <div class="flex w-full flex-col">
+    <div>Testimonios</div>
+    <div class="flex w-full"></div>
+  </div>
+
+  <!-- SECTION: CONTACT -->
+
+  <div class="flex w-full flex-col">
+    <div>Información de Contacto</div>
+    <div></div>
+    <div class="flex w-full"></div>
+  </div>
 </div>
