--- a/libs/core/layout/src/lib/header/header.component.html
+++ b/libs/core/layout/src/lib/header/header.component.html
@@ -1,7 +1,33 @@
 <div
-  class="w-full h-[66px] px-gutter flex items-center border-b-[1px] border-black-500"
+  class="w-full h-[66px] px-gutter flex items-center border-b-[1px] border-black-500 justify-between"
 >
   <div class="flex gap-4 items-center">
     <!-- SVG ICON -->
+
+    <svg
+      style="
+        width: 30px;
+        height: 30px;
+        overflow: visible;
+        opacity: 1;
+        z-index: 1;
+        fill: rgb(255, 120, 75);
+      "
+      viewBox="0 0 640 512"
+    >
+      <path
+        d="M192 384h192c53 0 96-43 96-96h32c70.6 0 128-57.4 128-128S582.6 32 512 32H120c-13.3 0-24 10.7-24 24v232c0 53 43 96 96 96zM512 96c35.3 0 64 28.7 64 64s-28.7 64-64 64h-32V96h32zm47.7 384H48.3c-47.6 0-61-64-36-64h583.3c25 0 11.8 64-35.9 64z"
+      ></path>
+    </svg>
+
+    <div>Kafè</div>
+  </div>
+
+  <div class="flex items-center gap-4">
+    <div>Inicio</div>
+    <div>Menú</div>
+    <div>Sobre Nosotros</div>
+    <div>Contacto</div>
+    <button mat-flat-button [color]="'red'">Hacer una reserva</button>
   </div>
 </div>
