--- a/libs/core/stylesheets/src/lib/variables/_var.scss
+++ b/libs/core/stylesheets/src/lib/variables/_var.scss
@@ -2,8 +2,8 @@
 @use '@angular/material' as mat;
 
 // Palettes for theme using the Material Design palettes.
-$kafe-primary: mat.m2-define-palette(mat.$m2-indigo-palette, A400, A100, A700);
-$kafe-accent: mat.m2-define-palette(mat.$m2-indigo-palette);
+$kafe-primary: mat.m2-define-palette(mat.$m2-deep-orange-palette);
+$kafe-accent: mat.m2-define-palette(mat.$m2-brown-palette);
 $kafe-warn: mat.m2-define-palette(mat.$m2-red-palette);
 
 $knowify-theme-light:  mat.m2-define-light-theme((
