[FIX] Routing redirect

--- a/libs/core/layout/src/lib/header/header.component.html
+++ b/libs/core/layout/src/lib/header/header.component.html
@@ -28,6 +28,8 @@
     <div>Menú</div>
     <div>Sobre Nosotros</div>
     <div>Contacto</div>
-    <button mat-flat-button color="primary">Hacer una reserva</button>
+    <button mat-flat-button color="primary" [routerLink]="['/reservations']">
+      Hacer una reserva
+    </button>
   </div>
 </div>
