--- a/libs/reservations/view-reservations/src/lib/view-loader-stepper/view-loader-stepper.component.html
+++ b/libs/reservations/view-reservations/src/lib/view-loader-stepper/view-loader-stepper.component.html
@@ -1,1 +1,3 @@
-<reservations-stepper></reservations-stepper>
+<div class="px-gutter pt-4 container">
+  <reservations-stepper></reservations-stepper>
+</div>
