[ADD] Directives libraries

--- a/libs/shared/feature-stepper/src/lib/steps/wizard-reservations/step-2-review-reservation/review-reservation.component.html
+++ b/libs/shared/feature-stepper/src/lib/steps/wizard-reservations/step-2-review-reservation/review-reservation.component.html
@@ -81,7 +81,12 @@
   </div>
   <div class="flex justify-end mt-2 w-full gap-2 p-5">
     <button mat-raised-button color="primary" (click)="stepBack()">Edit</button>
-    <button mat-raised-button color="primary" (click)="finalize()">
+    <button
+      mat-raised-button
+      color="primary"
+      (click)="finalize()"
+      [mtBasicSpinner]="loggingSended"
+    >
       Confirm
     </button>
   </div>
