--- a/libs/shared/feature-stepper/src/lib/steps/wizard-reservations/step-3-confirm/confirm.component.html
+++ b/libs/shared/feature-stepper/src/lib/steps/wizard-reservations/step-3-confirm/confirm.component.html
@@ -1,3 +1,36 @@
 <div class="flex pt-10 flex-auto flex-col">
-  <div class="pt-0 p-8 flex flex-col w-full overflow-y-auto h-[53vh]"></div>
+  <div class="pt-0 p-8 flex flex-col w-full overflow-y-auto h-[53vh]">
+    <div class="flex w-full items-center flex-col gap-4">
+      <div class="text-6xl font-bold">Welcome to Kafè!</div>
+      <span>Your reservation has been made successfully</span>
+    </div>
+
+    <div
+      class="w-full flex flex-col items-center"
+      *ngIf="userInfoReservation$ | async as clientInfo"
+    >
+      <div class="text-xl font-bold">{{ clientInfo.sector }}</div>
+
+      <div class="flex w-full">
+        Table for {{ clientInfo.partySize }} on {{ clientInfo.date }} at
+        {{ clientInfo.hour }}
+      </div>
+
+      <div class="flex w-full items-center flex-col gap-4">
+        <div class="flex">
+          <div>Name:</div>
+          <div>{{ clientInfo.name }}</div>
+        </div>
+
+        <div class="flex">
+          <div>Confirmation #:</div>
+          <div>{{ clientInfo.name }}</div>
+        </div>
+      </div>
+
+      <div class="flex w-full items-center">
+        1234 N. Main St. Lower East Side Manhattan, NY
+      </div>
+    </div>
+  </div>
 </div>
